<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail_medicine.DetailMedicineActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">

       <FrameLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent">
           <ImageView
               android:id="@+id/iv_detail_medicine"
               android:layout_width="match_parent"
               android:layout_height="250dp"
               android:scaleType="fitCenter"
               android:src="@drawable/medicine_detail" />

           <ImageView
               android:layout_marginTop="32dp"
               android:layout_marginStart="16dp"
               android:id="@+id/iv_back"
               android:layout_width="35dp"
               android:layout_height="35dp"
               android:src="@drawable/back"/>

           <TextView
               android:id="@+id/tv_medicine_name"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:background="@drawable/bg_text_view"
               android:fontFamily="@font/quicksand_bold"
               android:text="@string/nama_obat"
               android:layout_marginStart="16dp"
               android:layout_marginBottom="16dp"
               android:layout_gravity="bottom"
               android:textSize="14sp"
               android:padding="8dp"
               android:textColor="@color/white"/>
       </FrameLayout>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="16dp"
           android:lineSpacingMultiplier="1"

           android:text="@string/tv_medicine_description" />

       <TableLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginLeft="16dp"
           android:layout_marginRight="16dp"
           android:layout_marginBottom="16dp">

           <TableRow
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginBottom="8dp">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textSize="14sp"
                   android:layout_marginEnd="16dp"
                   android:text="Kategori" />

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textSize="14sp"
                   android:layout_weight="1"
                   android:text="@string/category" />
           </TableRow>

           <TableRow
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginBottom="8dp">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginEnd="16dp"
                   android:textSize="14sp"
                   android:text="Komposisi" />

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:textSize="14sp"
                   android:text="@string/composition" />
           </TableRow>

           <TableRow
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginBottom="8dp">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginEnd="16dp"
                   android:textSize="14sp"
                   android:text="Khasiat" />

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:textSize="14sp"
                   android:text="@string/efficacy" />
           </TableRow>

           <TableRow
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginBottom="8dp">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginEnd="16dp"
                   android:textSize="14sp"
                   android:text="Efek Samping"/>

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:textSize="14sp"
                   android:text="@string/side_effect"/>
           </TableRow>

           <TableRow
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginBottom="8dp">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginEnd="16dp"
                   android:textSize="14sp"
                   android:text="Cara Pembuatan"/>

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:textSize="14sp"
                   android:text="@string/recipe"/>
           </TableRow>
       </TableLayout>


   </LinearLayout>

</ScrollView>