<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="16dp"
    tools:context=".ui.home.HomeFragment">

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/halo_user"
                android:textColor="@color/brown_primary"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/iv_container"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:src="@drawable/button_stroke_shape"
                android:layout_marginTop="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/iv_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/iv_container">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/btn_survey"
                        android:layout_width="75dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/button_shape"
                        android:fontFamily="@font/quicksand_bold"
                        android:text="@string/mulai"
                        android:textSize="10sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/linearLayout"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="18dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/tv_keluhan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/quicksand_bold"
                            android:text="@string/ungkap_keluhan"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            app:layout_constraintBottom_toBottomOf="@+id/iv_container"
                            app:layout_constraintStart_toStartOf="@+id/iv_container"
                            app:layout_constraintTop_toTopOf="@+id/iv_container"
                            app:layout_constraintVertical_bias="0.25" />

                        <TextView
                            android:layout_width="220dp"
                            android:layout_height="32dp"
                            android:layout_marginTop="6dp"
                            android:fontFamily="@font/quicksand_medium"
                            android:text="@string/deskripsi_survey"
                            android:textSize="12sp" />
                    </LinearLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/tv_rekomendasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_regular"
                android:text="@string/rekomendasi"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_container" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_layout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_medicine_recomendation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_medicine"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>